another IT test refactor